--- a/hello-world/src/app/components/header/header.html
+++ b/hello-world/src/app/components/header/header.html
@@ -1,1 +1,9 @@
-<div class="header">{{title()}}</div>
+<div class="header">
+    <nav>
+        <span>{{title()}}</span>
+        <ul>
+            <li><a routerLink="/">Home</a></li>
+            <li><a routerLink="/todos">Todos</a></li>
+        </ul>
+    </nav>
+</div>
