--- a/hello-world/src/app/components/header/header.scss
+++ b/hello-world/src/app/components/header/header.scss
@@ -4,4 +4,29 @@
   color: white;
   background-color: black;
   padding: 10px; 
+
+  nav {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+
+    ul {
+      list-style: none;
+      display: flex;
+      gap: 15px;
+      margin: 0;
+      padding: 0;
+
+      li {
+        a {
+          color: white;
+          text-decoration: none;
+
+          &:hover {
+            text-decoration: underline;
+          }
+        }
+      }
+    }
+  }
 }
