--- a/hello-world/src/app/todos/todos.html
+++ b/hello-world/src/app/todos/todos.html
@@ -1,1 +1,9 @@
-<p>todos works!</p>
+<h3>Todos List</h3>
+<ul>
+    @for (item of todoItems(); track item.id) {
+        <li>
+            <input id="todo-{{item.id}}" type="checkbox" [value]="item.completed"/>
+            <label for="todo-{{item.id}}">{{item.title}}</label>
+        </li>
+    }   
+</ul>
